--- a/review/templates/edit_review.html
+++ b/review/templates/edit_review.html
@@ -9,7 +9,6 @@
 <div class="flex flex-col min-h-screen bg-gray-100">
   <div class="container mx-auto px-4 py-8 mt-16 max-w-xl">
     <h1 class="text-3xl font-bold text-center mb-8 text-black">Edit Review</h1>
-  
     <div class="bg-white rounded-lg p-6 form-style">
       <form method="POST" class="space-y-6">
           {% csrf_token %}
@@ -30,7 +29,7 @@
               </div>
           {% endfor %}
           <div class="flex justify-center mt-6">
-              <button type="submit" class="bg-indigo-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
+              <button type="submit" class="bg-orange-500 text-white font-semibold px-6 py-3 rounded-lg hover:bg-indigo-700 transition duration-300 ease-in-out w-full">
                   Save
               </button>
           </div>
