BENERIN DISPLAY VIEW FOR THE LAST TIME

--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -99,7 +99,7 @@
 
       } else {
           htmlString = `
-          <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5 w-full max-w-7xl p-5 mt-24 justify-start">
+          <div class="flex flex-wrap w-full max-w-7xl p-5 mt-24 justify-start">
           `;
           filteredEntries.forEach((item) => {
               const name = item.fields.name;
@@ -107,7 +107,7 @@
               const picture = item.fields.picture;
 
               htmlString += `
-              <div class="bg-white bg-opacity-50 w-32 md:w-48 border border-gray-300 rounded-lg sm:p-5 p-3 shadow-lg hover:scale-105 transition-transform duration-200 text-center flex flex-col justify-between ">
+              <div class="bg-white bg-opacity-50 w-32 md:w-48 border border-gray-300 rounded-lg mx-3 sm:p-5 p-3 shadow-lg hover:scale-105 transition-transform duration-200 text-center flex flex-col justify-between ">
                   <div>
                       ${picture ? `<img src="/media/${picture}" alt="${name}" class="md:w-36 md:h-36 w-24 h-24" style="object-fit: cover; border-radius: 8px; margin: 0 auto;">` : ''}
                       <h5 class="product-name mb-2 font-semibold mt-4 line-clamp-2">${name}</h5>
