--- a/display/templates/landing_page.html
+++ b/display/templates/landing_page.html
@@ -26,25 +26,25 @@
       <h1 class="font-serif text-black font-bold text-5xl m-16">Fitur</h1>
     </div>
     <div class="flex md:flex-nowrap flex-wrap justify-center items-center my-10">
-      <img src="{% static 'image/placeholder.png' %}" class="ml-24 size-auto" alt="Logo" />
+      <img src="{% static 'image/gambar1.png' %}" class="ml-24 size-2/5" alt="Logo" />
       <div class="p-6">
         <h2 class="font-bold text-orange-600 py-6 font-main text-xl md:text-3xl">Kelola souvenir yang akan dijual dan promosikan dengan mudah</h2>
         <ul class="list-disc list-inside pl-5 space-y-2 text-lg text-gray-700">
-          <li>Admin CRUD product</li>
-          <li>Promo/discount</li>
+          <li>Otoritas mudah admin</li>
+          <li>Menambahkan promo</li>
         </ul>
       </div>
     </div>
     <div class="flex md:flex-nowrap flex-wrap justify-center items-center my-10">
-      <img src="{% static 'image/placeholder.png' %}" class="ml-24 size-auto" alt="Logo" />
+      <img src="{% static 'image/gambar2.png' %}" class="ml-24 size-2/5" alt="Logo" />
       <div class="p-6">
         <h2 class="font-bold text-orange-600 pb-6 font-main text-xl md:text-3xl">Cari, lalu simpan atau checkout souvenir impian. Tinggalkan juga review-nya!</h2>
         <ul class="list-disc list-inside pl-5 space-y-2 text-lg text-gray-700">
           <li>Forum</li>
           <li>Wishlist</li>
           <li>Cart</li>
-          <li>Search Bar</li>
           <li>Review</li>
+          <li>Filter pada tiap modulnya</li>
         </ul>
       </div>
     </div>
@@ -66,39 +66,39 @@
     <div class="grid grid-cols-3 gap-8">
       <!-- Person 1 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 1" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 1</h2>
-        <p class="text-gray-500">Posisi 1</p>
+        <img src="https://csui2023.github.io/pfp/arzaka-raffan-mawardi.jpg" alt="Person 1" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Arzaka Raffan Mawardi</h2>
+        <p class="text-gray-500">2306152393</p>
       </div>
       <!-- Person 2 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 2" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 2</h2>
-        <p class="text-gray-500">Posisi 2</p>
+        <img src="https://csui2023.github.io/pfp/muhammad-rafli-esa-pradana.jpg" alt="Person 2" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Muhammad Rafli Esa Pradana</h2>
+        <p class="text-gray-500">2306207480</p>
       </div>
       <!-- Person 3 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 3" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 3</h2>
-        <p class="text-gray-500">Posisi 3</p>
+        <img src="https://csui2023.github.io/pfp/muhammad-raihan-maulana.jpg" alt="Person 3" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Muhammad Raihan Maulana</h2>
+        <p class="text-gray-500">2306216636</p>
       </div>
       <!-- Person 4 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 4" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 4</h2>
-        <p class="text-gray-500">Posisi 4</p>
+        <img src="https://csui2023.github.io/pfp/muhammad-reyhan-ardian.jpg" alt="Person 4" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Muhammad Reyhan Ardian</h2>
+        <p class="text-gray-500">2306217185</p>
       </div>
       <!-- Person 5 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 5" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 5</h2>
-        <p class="text-gray-500">Posisi 5</p>
+        <img src="https://csui2023.github.io/pfp/wisnu-nugroho.jpg" alt="Person 5" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Wisnu Nugroho</h2>
+        <p class="text-gray-500">2306275084</p>
       </div>
       <!-- Person 6 -->
       <div class="flex flex-col items-center">
-        <img src="{% static 'image/placeholder.png' %}" alt="Person 6" class="w-32 h-32 rounded-full" />
-        <h2 class="mt-4 font-bold text-xl">Nama 6</h2>
-        <p class="text-gray-500">Posisi 6</p>
+        <img src="https://csui2023.github.io/pfp/zufar-romli-amri.jpg" alt="Person 6" class="w-32 h-32 rounded-full" />
+        <h2 class="mt-4 font-bold text-xl">Zufar Romli Amri</h2>
+        <p class="text-gray-500">2306202694</p>
       </div>
     </div>
   </div>
