--- a/cart/templates/show_cart.html
+++ b/cart/templates/show_cart.html
@@ -5,7 +5,7 @@
   <div class="flex justify-center items-start min-h-screen pt-20 pb-6 px-20" style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%);">
     <div class="bg-white bg-opacity-70 shadow-md rounded-lg p-6 w-full ml-5">
       <div class="flex justify-between mb-3">
-        <h2 class="text-2xl font-semibold mb-4">My Cart</h2>
+        <h2 class="text-2xl font-main font-bold font-semibold mb-4">My Cart</h2>
         <div class="mb-6 flex flex-col md:flex-row gap-4">
           <form method="get" class="flex-1 flex flex-col md:flex-row gap-4" action="{% url 'cart:show_cart' %}">
             <!-- Sort Dropdown -->
@@ -84,7 +84,7 @@
 
     <!-- Total Price Box -->
     <div class="bg-white bg-opacity-70 shadow-md rounded-lg p-6 ml-6 min-w-48 w-64 mr-5">
-      <h2 class="text-xl font-semibold mb-4">Total Price</h2>
+      <h2 class="text-xl font-main mb-4">Total Price</h2>
       <p class="text-lg">
         Rp<span id="totalPrice">0</span>
       </p>
