--- a/review/templates/review_page.html
+++ b/review/templates/review_page.html
@@ -22,7 +22,7 @@
                 </select>
             </div>
             {% if user.is_authenticated and not user.userprofile.role == 'admin' %}
-            <button onclick="showReviewModal()" class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-1 px-2 text-sm rounded" style="padding: 1px;">
+            <button onclick="showReviewModal()" class="bg-orange-500 hover:bg-orange-700 text-white font-bold px-6 my-4 text-sm rounded" style="padding: 1px;">
                 Tambah Ulasan
             </button>
             {% endif %}
