--- a/display/templates/display.html
+++ b/display/templates/display.html
@@ -99,7 +99,7 @@
 
       } else {
           htmlString = `
-          <div class="flex flex-wrap w-full max-w-7xl p-5 mt-24 justify-start">
+          <div class="flex flex-wrap w-full max-w-7xl p-5 mt-24 justify-center">
           `;
           filteredEntries.forEach((item) => {
               const name = item.fields.name;
